--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -1,5 +1,6 @@
 TARGETS =			\
-	TestInfo.exe
+	TestInfo.exe		\
+	TestDirectory.exe
 
 GTKSHARP_LIBS = /pkg:gtk-sharp-2.0
 
@@ -10,10 +11,15 @@ noinst_SCRIPTS = $(TARGETS) $(EXTRA_TARGETS)
 CLEANFILES = $(TARGETS) $(EXTRA_TARGETS)
 
 EXTRA_DIST = 			\
-	TestInfo.cs
+	TestInfo.cs		\
+	TestDirectory.cs
+
 gio-sharp.dll: $(assembly)
 	cp $(assembly) gio-sharp.dll
 	cp $(assembly).config gio-sharp.dll.config
 
 TestInfo.exe: $(srcdir)/TestInfo.cs gio-sharp.dll
 	$(CSC) /debug /out:TestInfo.exe $(references) $(srcdir)/TestInfo.cs
+
+TestDirectory.exe: $(srcdir)/TestDirectory.cs gio-sharp.dll
+	$(CSC) /debug /out:TestDirectory.exe $(references) $(srcdir)/TestDirectory.cs
