2008-05-09  Stephane Delcroix  <sdelcroix@novell.com>
	* gio/FileAdapter.custom: ad a ToString override.

svn path=/trunk/gio-sharp/; revision=102863

--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -18,7 +18,8 @@ references = $(GLIB_SHARP_LIBS)
 sources =		\
 	FileFactory.cs
 
-customs =		\
+customs =			\
+	FileAdapter.custom	\
 	FileEnumerator.custom
 
 $(API): $(METADATA) $(RAW_API)
