2008-12-08  Stephane Delcroix  <sdelcroix@novell.com>
	* gio/metadata: change Seekable.Tell() to Position.
	* gio/StreamWrapper.cs: a wrapper for GLib.[Input|Output]Streams to
	System.IO.Stream.

svn path=/trunk/gio-sharp/; revision=120994

--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -16,7 +16,8 @@ EXTRA_DIST = $(RAW_API) $(METADATA) $(customs) $(sources) gio-sharp-unstable.pc.
 references = $(GLIB_SHARP_LIBS)
 
 sources =		\
-	$(srcdir)/FileFactory.cs
+	$(srcdir)/FileFactory.cs	\
+	$(srcdir)/StreamWrapper.cs
 
 customs =			\
 	File.custom		\
