2008-12-08  Stephane Delcroix  <sdelcroix@novell.com>
	* gio/metadata:
	* gio/Makefile.am:
	* gio/SeekType.cs: fix GSeekType so Seekable.Seek () is generated

svn path=/trunk/gio-sharp/; revision=121028

--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -17,7 +17,8 @@ references = $(GLIB_SHARP_LIBS)
 
 sources =		\
 	$(srcdir)/FileFactory.cs	\
-	$(srcdir)/StreamWrapper.cs
+	$(srcdir)/StreamWrapper.cs	\
+	$(srcdir)/SeekType.cs
 
 customs =			\
 	File.custom		\
