SeekType was already defined in glib-sharp
svn path=/trunk/gio-sharp/; revision=121032

--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -17,8 +17,7 @@ references = $(GLIB_SHARP_LIBS)
 
 sources =		\
 	$(srcdir)/FileFactory.cs	\
-	$(srcdir)/StreamWrapper.cs	\
-	$(srcdir)/SeekType.cs
+	$(srcdir)/StreamWrapper.cs
 
 customs =			\
 	File.custom		\
