various fixes. Give the assembly a strongname

--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -2,53 +2,40 @@ UNSAFE = -unsafe
 DEBUG = -debug
 
 
-GTK_SRCS =					\
-	$(srcdir)/Gtk.Sources/Dialog.cs		\
-	$(srcdir)/Gtk.Sources/Widget.cs
-
-GTK_CUSTOMS =					\
-	$(srcdir)/Gtk.Customs/Builder.custom
-
-GLIB_SRCS =					\
-	$(srcdir)/GLib.Sources/Priority.cs	\
-	$(srcdir)/GLib.Sources/Sources.cs	\
-	$(srcdir)/GLib.Sources/Timeout.cs
-
 SRCS =						\
-	$(srcdir)/AssemblyInfo.cs		\
-	$(GLIB_SRCS)				\
-	$(GTK_SRCS)
+	AssemblyInfo.cs
+
+CUSTOMS =
 
 ASSEMBLIES =					\
-	-pkg:glib-sharp-2.0			\
-	-pkg:gtk-sharp-2.0
+	-pkg:glib-sharp-2.0
 
-all: gtk-sharp-beans.dll
+all: gio-sharp.dll
 
-gtk-api.xml: $(srcdir)/gtk-api.raw $(srcdir)/Gtk.metadata
+gio-api.xml: $(srcdir)/gio-api.raw $(srcdir)/Gio.metadata
 	@echo -e "\n*** Massaging the raw api into $@"
-	cp $(srcdir)/gtk-api.raw gtk-api.xml
-	chmod +w $(builddir)/gtk-api.xml
-	gapi2-fixup --api=gtk-api.xml --metadata=$(srcdir)/Gtk.metadata
+	cp $(srcdir)/gio-api.raw gio-api.xml
+	chmod +w $(builddir)/gio-api.xml
+	gapi2-fixup --api=gio-api.xml --metadata=$(srcdir)/Gio.metadata
 
-gtk_generated/Builder.cs: gtk-api.xml $(GTK_CUSTOMS)
+generated/File.cs: gio-api.xml $(CUSTOMS)
 	@echo -e "\n*** Generating C# code"
-	gapi2-codegen $(GLIBSHARP_CFLAGS) --outdir=gtk_generated --customdir=$(srcdir) --generate gtk-api.xml
+	gapi2-codegen $(GLIBSHARP_CFLAGS) --outdir=generated --customdir=$(srcdir) --generate gio-api.xml
 
-gtk-sharp-beans.dll: $(srcdir)/gtk_generated/Builder.cs $(SRCS)
+gio-sharp.dll: $(srcdir)/generated/File.cs $(SRCS)
 	@echo -e "\n*** Building $@"
-	$(CSC) -target:library -out:$@ $(UNSAFE) $(DEBUG) $(ASSEMBLIES) $(SRCS) $(srcdir)/gtk_generated/*.cs
+	$(CSC) -target:library -out:$@ $(UNSAFE) $(DEBUG) $(ASSEMBLIES) $(SRCS) $(srcdir)/generated/*.cs
 
-install: gtk-sharp-beans.dll
+install: gio-sharp.dll
 	@echo -e "\n*** Installing $< into the GAC"
 	gacutil -i $<
 
 CLEANFILES = 			\
-	gtk-sharp-beans.dll 	\
-	gtk-sharp-beans.dll.mdb \
-	gtk-api.xml
+	gio-sharp.dll 	\
+	gio-sharp.dll.mdb \
+	gio-api.xml
 
 EXTRA_DIST =			\
 	$(SRCS)			\
-	$(GTK_CUSTOMS)		\
+	$(CUSTOMS)		\
 	gtk-api.raw
