install the assembly at the right place, install the .pc file

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,18 @@ AC_CONFIG_SRCDIR(gio/AssemblyInfo.cs)
 
 AM_INIT_AUTOMAKE
 
+PACKAGE_VERSION=gio-sharp-2.0
+AC_SUBST(PACKAGE_VERSION)
 AC_PATH_PROG(CSC, gmcs)
+AC_PATH_PROG(GACUTIL, gacutil, no)
+if test "x$GACUTIL" = "xno" ; then
+	AC_MSG_ERROR([No gacutil tool found. You need to install either the mono or .Net SDK.])
+fi
+
+GACUTIL_FLAGS='/package $(PACKAGE_VERSION) /gacdir $(DESTDIR)$(prefix)/lib'
+
+AC_SUBST(GACUTIL)
+AC_SUBST(GACUTIL_FLAGS)
 
 PKG_CHECK_MODULES(GLIBSHARP, glib-sharp-2.0 >= 2.12)
 PKG_CHECK_MODULES(GAPI, gapi-2.0 >= 2.12.0)
