--- a/generator/Makefile.am
+++ b/generator/Makefile.am
@@ -59,5 +59,6 @@ EXTRA_DIST =					\
 	$(dist_sources)
 
 gapi_codegen.exe: $(build_sources)
+	@echo -e "\n*** Building the generator"
 	$(CSC) /out:gapi_codegen.exe $(OFF_T_FLAGS) $(references) $(build_sources)
 
