--- a/configure.ac.in
+++ b/configure.ac.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(gio-sharp, 2.13.92, stephane@delcroix.org)
+AC_INIT(gio-sharp, @GIO_SHARP_VERSION@, stephane@delcroix.org)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_SRCDIR(gio/AssemblyInfo.cs)
 
@@ -33,6 +33,10 @@ AC_SUBST(GACUTIL_FLAGS)
 PKG_CHECK_MODULES(GLIBSHARP, glib-sharp-2.0 >= 2.12)
 PKG_CHECK_MODULES(GAPI, gapi-2.0 >= 2.12.0)
 
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= @GLIB_REQUIRED@)
+
+CSC_FLAGS="@CSC_FLAGS@"
+
 if test `uname -s` = "Darwin"; then
 	LIB_PREFIX=
 	LIB_SUFFIX=.dylib
@@ -40,6 +44,8 @@ else
 	LIB_PREFIX=.so
 	LIB_SUFFIX=
 fi
+
+AC_SUBST(CSC_FLAGS)
 AC_SUBST(LIB_PREFIX)
 AC_SUBST(LIB_SUFFIX)
 
