don't bind the socket stuffs

--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -6,7 +6,11 @@ SRCS =						\
 	FileFactory.cs				\
 	GioStream.cs
 
-CUSTOMS =
+CUSTOMS =					\
+	AppInfoAdapter.custom			\
+	FileAdapter.custom			\
+	File.custom				\
+	FileEnumerator.custom
 
 ASSEMBLIES =					\
 	`pkg-config --libs glib-sharp-2.0`
