Make it pass distcheck.
And actually build. Both the config and m4 variable referenced in autogen.sh
didn't exist on my system. Works fine now.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 SUBDIRS =		\
 	generator	\
-	gio
+	gio		\
+	sources
 
 EXTRA_DIST = sources/Makefile.am sources/Makefile.in
+MAINTAINERCLEANFILES = Makefile.in
