--- a/configure.ac.in
+++ b/configure.ac.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(gio-sharp, @GIO_SHARP_VERSION@, stephane@delcroix.org)
 AC_CONFIG_AUX_DIR(config)
-AC_CONFIG_SRCDIR(gio/AssemblyInfo.cs)
+AC_CONFIG_SRCDIR(gio/AssemblyInfo.cs.in)
 
 AM_INIT_AUTOMAKE
 
@@ -52,6 +52,7 @@ AC_OUTPUT(
 Makefile 
 generator/Makefile
 gio/Makefile
+gio/AssemblyInfo.cs
 gio/gio-sharp.dll.config
 gio/gio-sharp-2.0.pc
 sources/Makefile
