--- a/gio/gio-sharp-2.0.pc.in
+++ b/gio/gio-sharp-2.0.pc.in
@@ -1,8 +1,9 @@
 prefix=${pcfiledir}/../..
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
-assemblies_dir=${libdir}/mono/@PACKAGE_VERSION@
+assemblies_dir=${libdir}/gio-sharp
 gapidir=${prefix}/share/gapi-2.0
+Libraries=${assemblies_dir}/gio-sharp.dll ${assemblies_dir}/gio-sharp.dll.mdb
 
 Name: GIO#
 Description: GIO# - GIO .NET Binding
