gmcs was replaced by mcs.

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -14,7 +14,7 @@ if test "x$MONO" = "xno" ; then
 	AC_PATH_PROG(CSC, csc.exe)
 else
 	using_mono=yes
-	AC_PATH_PROG(CSC, gmcs)
+	AC_PATH_PROG(CSC, mcs)
 fi
 AM_CONDITIONAL(USING_MONO, [test $using_mono = yes])
 AC_PATH_PROG(GACUTIL, gacutil, no)
